--- a/public/less/components/login.less
+++ b/public/less/components/login.less
@@ -1,6 +1,85 @@
+@button-color : #FF3366;
 #signin-signup{
   height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-image: url('../images/backgr.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  // content login form
+  .overlay-login{
+    max-width: 350px;
+    padding: 90px 20px 30px 20px;
+    position: relative;
+    z-index: 1;
+    .head-login-logo{
+      text-align: center;
+      color: white;
+      font-size: 85px;
+      padding-bottom: 100px;
+    }
+    &:after{
+      position: absolute;
+      top: 0;
+      left: 0;
+      content: "";
+      z-index: -1;
+      width: 100%;
+      height: 100%;
+      background-color: black;
+      opacity: 0.4;
+    }
+    // input and button
+    .my-button{
+      border-radius: 20px;
+      background-color: @button-color;
+      padding: 14px;
+      margin: 30px 0;
+      &:hover{
+        opacity: 0.9;
+      }
+    }
+    .my-input-transparent{
+      box-shadow: none;
+      color: white;
+      border: none;
+      border-bottom: 1px solid rgba(228, 230, 232, 0.4);
+      background-color: transparent;
+      padding-left: 20px;
+    }
+    .user-input{
+      position: relative;
+      &::before{
+        font-family: 'FontAwesome';
+        color:white;
+        position: absolute;
+        content: "\f007";
+        top: 6px;
+        font-size: 18px;
+      }
+    }
+    .password-input{
+      position: relative;
+      &::before{
+        font-family: 'FontAwesome';
+        color:white;
+        position: absolute;
+        content: "\f023";
+        top: 6px;
+        font-size: 18px;
+      }
+    }
+    .sign-up-link{
+      text-align: center;
+      span{
+        color: rgba(228, 230, 232, 0.5);
+        a{
+          color: white;
+        }
+      }
+
+    }
+  }
 }
