--- a/public/css/components/login.css
+++ b/public/css/components/login.css
@@ -1,17 +1,8 @@
 #signin-signup {
   height: 100vh;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   background-image: url('../images/backgr.jpg');
   background-position: center;
   background-repeat: no-repeat;
@@ -28,11 +19,6 @@
   color: white;
   font-size: 85px;
   padding-bottom: 100px;
-  opacity: 0;
-  -webkit-animation: loginLogo .5s forwards;
-          animation: loginLogo .5s forwards;
-  -webkit-animation-delay: .4s;
-          animation-delay: .4s;
 }
 #signin-signup .overlay-login:after {
   position: absolute;
@@ -43,15 +29,13 @@
   width: 100%;
   height: 100%;
   background-color: black;
-  opacity: 0.5;
+  opacity: 0.4;
 }
 #signin-signup .overlay-login .my-button {
   border-radius: 20px;
   background-color: #ff3366;
   padding: 14px;
   margin: 30px 0;
-  -webkit-animation-delay: .8s;
-          animation-delay: .8s;
 }
 #signin-signup .overlay-login .my-button:hover {
   opacity: 0.9;
@@ -63,14 +47,6 @@
   border-bottom: 1px solid rgba(228, 230, 232, 0.4);
   background-color: transparent;
   padding-left: 20px;
-}
-#signin-signup .overlay-login .my-input-transparent::-webkit-input-placeholder {
-  color: rgba(228, 230, 232, 0.5);
-}
-#signin-signup .overlay-login .user-input,
-#signin-signup .overlay-login .password-input {
-  -webkit-animation-delay: .6s;
-          animation-delay: .6s;
 }
 #signin-signup .overlay-login .user-input {
   position: relative;
@@ -103,49 +79,27 @@
 #signin-signup .overlay-login .sign-up-link span a {
   color: white;
 }
-.overlayLogin-enter {
+.example-enter {
   opacity: 0.01;
 }
-.overlayLogin-enter.overlayLogin-enter-active {
+.example-enter.example-enter-active {
   opacity: 1;
-  -webkit-transition: opacity 500ms ease-in;
-          transition: opacity 500ms ease-in;
+  transition: opacity 500ms ease-in;
 }
-.overlayLogin-leave {
+.example-leave {
   opacity: 1;
 }
-.overlayLogin-leave.overlayLogin-leave-active {
+.example-leave.example-leave-active {
   opacity: 0.01;
-  -webkit-transition: opacity 300ms ease-in;
-          transition: opacity 300ms ease-in;
+  transition: opacity 300ms ease-in;
 }
-.overlayLogin-appear {
+.example-appear {
   opacity: 0.01;
-  -webkit-transform: translateY(100px);
-      -ms-transform: translateY(100px);
-          transform: translateY(100px);
 }
-.overlayLogin-appear.overlayLogin-appear-active {
+.example-appear.example-appear-active {
   opacity: 1;
-  -webkit-transform: translateY(0px);
-      -ms-transform: translateY(0px);
-          transform: translateY(0px);
-  -webkit-transition: all 0.4s ease-in;
-          transition: all 0.4s ease-in;
+  transition: opacity 0.5s ease-in;
 }
-@-webkit-keyframes loginLogo {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-@keyframes loginLogo {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+.text {
+  position: absolute;
 }
