--- a/public/less/components/login.less
+++ b/public/less/components/login.less
@@ -19,6 +19,9 @@
       color: white;
       font-size: 85px;
       padding-bottom: 100px;
+      opacity: 0;
+      animation: loginLogo .5s forwards;
+      animation-delay: .4s;
     }
     &:after{
       position: absolute;
@@ -29,7 +32,7 @@
       width: 100%;
       height: 100%;
       background-color: black;
-      opacity: 0.4;
+      opacity: 0.5;
     }
     // input and button
     .my-button{
@@ -37,6 +40,7 @@
       background-color: @button-color;
       padding: 14px;
       margin: 30px 0;
+      animation-delay: .8s;
       &:hover{
         opacity: 0.9;
       }
@@ -48,6 +52,12 @@
       border-bottom: 1px solid rgba(228, 230, 232, 0.4);
       background-color: transparent;
       padding-left: 20px;
+      &::-webkit-input-placeholder{
+        color: rgba(228, 230, 232, 0.5);
+      }
+    }
+    .user-input, .password-input{
+        animation-delay: .6s;
     }
     .user-input{
       position: relative;
@@ -83,3 +93,67 @@
     }
   }
 }
+
+// transition overlay login form
+.overlayLogin-enter {
+  opacity: 0.01;
+}
+
+.overlayLogin-enter.overlayLogin-enter-active {
+  opacity: 1;
+  transition: opacity 500ms ease-in;
+}
+
+.overlayLogin-leave {
+  opacity: 1;
+}
+
+.overlayLogin-leave.overlayLogin-leave-active {
+  opacity: 0.01;
+  transition: opacity 300ms ease-in;
+}
+.overlayLogin-appear {
+  opacity: 0.01;
+  transform: translateY(100px);
+}
+
+.overlayLogin-appear.overlayLogin-appear-active {
+  opacity: 1;
+  transform: translateY(0px);
+  transition: all .4s ease-in;
+}
+
+// transition logo
+
+@keyframes loginLogo{
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+
+// .login-logo-enter {
+//   opacity: 0.01;
+// }
+//
+// .login-logo-enter.login-logo-enter-active {
+//   opacity: 1;
+//
+//   transition: all 500ms ease-in;
+// }
+//
+// .login-logo-leave {
+//   opacity: 1;
+// }
+//
+// .login-logo-leave.login-logo-leave-active {
+//   opacity: 0.01;
+//   transition: opacity 300ms ease-in;
+// }
+// .login-logo-appear {
+//   opacity: 0;
+// }
+//
+// .login-logo-appear.login-logo-appear-active {
+//   opacity: 1;
+//   transition: all .5s ease-in;
+// }
