cap nhat amination

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -50,6 +50,7 @@
   background-color: #ff3366;
   padding: 14px;
   margin: 30px 0;
+  outline: none;
   -webkit-animation-delay: .8s;
           animation-delay: .8s;
 }
