--- a/public/less/components/login.less
+++ b/public/less/components/login.less
@@ -40,6 +40,7 @@
       background-color: @button-color;
       padding: 14px;
       margin: 30px 0;
+      outline: none;
       animation-delay: .8s;
       &:hover{
         opacity: 0.9;
