--- a/public/css/main.css
+++ b/public/css/main.css
@@ -93,45 +93,29 @@
 }
 .loader-enter.loader-enter-active {
   opacity: 1;
-  -webkit-transition: opacity 0.5s ease-in;
-          transition: opacity 0.5s ease-in;
+  transition: opacity 0.5s ease-in;
 }
 .loader-leave {
   opacity: 1;
 }
 .loader-leave.loader-leave-active {
   opacity: 0.01;
-  -webkit-transition: opacity 0.5s ease-in;
-          transition: opacity 0.5s ease-in;
+  transition: opacity 0.5s ease-in;
 }
 .overlayLogin-appear {
   opacity: 0.01;
-  -webkit-transform: translateY(100px);
-      -ms-transform: translateY(100px);
-          transform: translateY(100px);
+  transform: translateY(100px);
 }
 .overlayLogin-appear.overlayLogin-appear-active {
   opacity: 1;
-  -webkit-transform: translateY(0px);
-      -ms-transform: translateY(0px);
-          transform: translateY(0px);
-  -webkit-transition: all 0.4s ease-in;
-          transition: all 0.4s ease-in;
+  transform: translateY(0px);
+  transition: all 0.4s ease-in;
 }
 #signin-signup {
   height: 100vh;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   background-image: url('../images/backgr.jpg');
   background-position: center;
   background-repeat: no-repeat;
@@ -139,7 +123,7 @@
 }
 #signin-signup .overlay-login {
   max-width: 350px;
-  padding: 90px 20px 30px 20px;
+  padding: 60px 20px 30px 20px;
   position: relative;
   z-index: 1;
 }
@@ -147,12 +131,10 @@
   text-align: center;
   color: white;
   font-size: 85px;
-  padding-bottom: 100px;
+  padding-bottom: 50px;
   opacity: 0;
-  -webkit-animation: loginLogo .5s forwards;
-          animation: loginLogo .5s forwards;
-  -webkit-animation-delay: .4s;
-          animation-delay: .4s;
+  animation: loginLogo .5s forwards;
+  animation-delay: .4s;
 }
 #signin-signup .overlay-login:after {
   position: absolute;
@@ -171,8 +153,7 @@
   padding: 14px;
   margin: 30px 0;
   outline: none;
-  -webkit-animation-delay: .8s;
-          animation-delay: .8s;
+  animation-delay: .8s;
 }
 #signin-signup .overlay-login .my-button:hover {
   opacity: 0.9;
@@ -183,15 +164,15 @@
   border: none;
   border-bottom: 1px solid rgba(228, 230, 232, 0.4);
   background-color: transparent;
-  padding-left: 20px;
+  padding-left: 25px;
 }
 #signin-signup .overlay-login .my-input-transparent::-webkit-input-placeholder {
   color: rgba(228, 230, 232, 0.5);
 }
 #signin-signup .overlay-login .user-input,
-#signin-signup .overlay-login .password-input {
-  -webkit-animation-delay: .6s;
-          animation-delay: .6s;
+#signin-signup .overlay-login .password-input,
+#signin-signup .overlay-login .fullname-input {
+  animation-delay: .6s;
 }
 #signin-signup .overlay-login .user-input {
   position: relative;
@@ -200,7 +181,7 @@
   font-family: 'FontAwesome';
   color: white;
   position: absolute;
-  content: "\f007";
+  content: "\f0e0";
   top: 6px;
   font-size: 18px;
 }
@@ -212,6 +193,17 @@
   color: white;
   position: absolute;
   content: "\f023";
+  top: 6px;
+  font-size: 18px;
+}
+#signin-signup .overlay-login .fullname-input {
+  position: relative;
+}
+#signin-signup .overlay-login .fullname-input::before {
+  font-family: 'FontAwesome';
+  color: white;
+  position: absolute;
+  content: "\f2be";
   top: 6px;
   font-size: 18px;
 }
@@ -229,38 +221,23 @@
 }
 .overlayLogin-enter.overlayLogin-enter-active {
   opacity: 1;
-  -webkit-transition: opacity 500ms ease-in;
-          transition: opacity 500ms ease-in;
+  transition: opacity 500ms ease-in;
 }
 .overlayLogin-leave {
   opacity: 1;
 }
 .overlayLogin-leave.overlayLogin-leave-active {
   opacity: 0.01;
-  -webkit-transition: opacity 300ms ease-in;
-          transition: opacity 300ms ease-in;
+  transition: opacity 300ms ease-in;
 }
 .overlayLogin-appear {
   opacity: 0.01;
-  -webkit-transform: translateY(100px);
-      -ms-transform: translateY(100px);
-          transform: translateY(100px);
+  transform: translateY(100px);
 }
 .overlayLogin-appear.overlayLogin-appear-active {
   opacity: 1;
-  -webkit-transform: translateY(0px);
-      -ms-transform: translateY(0px);
-          transform: translateY(0px);
-  -webkit-transition: all 0.4s ease-in;
-          transition: all 0.4s ease-in;
-}
-@-webkit-keyframes loginLogo {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+  transform: translateY(0px);
+  transition: all 0.4s ease-in;
 }
 @keyframes loginLogo {
   from {
